[package]
name = "single_miner_coin"
version = "0.1.0"
authors = ["jacobweir"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.0-alpha.4"
block_cryptography_rust = { git = "https://github.com/jweir136/block_cryptography_rust.git" }